# vcell-mbsolver

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CTestTestfile.cmake  LICENSE  README.md  ReadMe.txt  build-windows.ps1  pyproject.toml  scratch.txt  vcpkg.json
.github/workflows/: bild-and-release.yml  build-and-release.yml  wheels.yml
ExpressionParser/: Parser.jjt
ExpressionParserTest/: CMakeLists.txt  ExpressionParserTest.cpp
FronTierLib/: CMakeLists.txt  windows_math_func.c  windows_math_func.h
FronTierLib/front/: fadv.c  fapi.h  fbdry1.c  fbdry3.c  fbdry4.c  fcheck3d.c  fcrosscur.c  fcrossext.c  fcrstatus.c  fdecs.h  fgb2d.c  fgb3comp.c  fgb3d.c  fgb3dutil.c  fgrid.c  finit.c  fint.c  fmap.c  fnode.c  fnodesub.c  fprint.c  fprop2d.c  fprop3d.c  fprotos.h  fredist2d.c  fredist3d.c  frp1.c  frp2.c  fscat1d.c  fscat2d.c  fscat3d1.c  fscat3d2.c  fscatter.c  fstate2d.c  fsub.c  ftop.c  funtan2d.c  funtan3d.c  fuserhooks.c  fuserint.h  (+2 more)
FronTierLib/intfc/: comp.c  comp1d.c  comp2d.c  comp3d.c  cross2d.c  iMesh.c  iblkb.c  iblkc2.c  iblkc3.c  icheck3d.c  idiagnostic.c  igview.c  ilocprotos.h  imkcurve.c  imksurf.c  int.h  int3d.c  intfc.c  iprotos.h  iprt3d.c  iredist.c  iredist_o2.c  irefl.c  isect2d.c  isect3d.c  isub.c  isurgery.c  itrisset.c  iuserintfc.c  ixgraph.c  map.c  ppcopy.c  setb1d.c  setb2d.c  shift.c  table.h  testintfc.c  top.c  trisurf.c  userhooks.c  (+2 more)
FronTierLib/tri/: tri1d.c  tri2d.c  tri3dutils.c  triel2.c  triel3.c  tripcs.c  trisurgery.c
FronTierLib/util/: cdecs.h
Solver/: MovingBoundarySetup.xsd
Solver/include/: Distance.h  MeshElementNode.h  MovingBoundarySetup.h  NumericConvert.h  Physiology.h  Universe.h  VCellChrono.h  VCellFront.h  World.h  algo.h
Solver/include/MBridge/: Figure.h
Solver/src/: MovingBoundaryParabolicProblem.cpp  MovingBoundarySetup.cpp  Physiology.cpp  ReportClient.cpp  SExpression.cpp  VCellFront.cpp  Voronoi64.cpp  World.cpp  algo.cpp  boundaryproviders.cpp  driver.cpp  intersection.cpp  persist.cpp
Tests/: CMakeLists.txt  CTestTestfile.cmake  TestMovingBoundary[1]_include.cmake  TestMovingBoundary[1]_tests.cmake  algotest.cpp  boosttest.cpp  clippertest.cpp  distancetest.cpp  example_2d.cpp  exptest.cpp  ftest.cpp  insidetest.cpp  logtest.cpp  segmenttest.cpp  v64.cpp  vcellutil.cpp  vdemo.cpp  vi64.cpp  worldtest.cpp
VCellMessaging/: CMakeLists.txt  GitDescribe.cpp
VCellMessaging/include/VCELL/: SimulationMessaging.h
matlab/clipperLink/: ReadMe.txt  clipper.cpm  clipperLink.cpm  matlabClipper.cpp  mexClipper.cpp
matlab/fronTierLink/: flink.cpp  fronTierCmd.cpp
matlab/fronTierReference/: FT_level_func.m  FT_velo_func.m  mexFT_Free.cpp  mexFT_Step.cpp  mexFT_Step_mute.cpp  testMexFronTier.m
matlab/util/: matlabStruct.cpp  matlabStruct.h  mlAssert.cpp
metadata/: readMovingBoundary.m
python/: CMakeLists.txt  pyvcellmbsolver.cpp  vcellmbsolver.py
python/pyvcell_mbsolver/: __init__.py  _core.pyi
python/tests/: conftest.py  test_vcellmbsolver.py
python/tests/data/: minimal.xml
vcommons/include/: OstreamSpy.h
