[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.10"]
build-backend = "scikit_build_core.build"

[project]
name = "pyvcell_mbsolver"
description = "Python bindings for the VCell moving-boundary parabolic PDE solver"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/virtualcell/vcell-mbsolver"
Repository = "https://github.com/virtualcell/vcell-mbsolver"

# ---------------------------------------------------------------------------
# scikit-build-core: drive the existing CMake build to produce the wheel.
#
# Only the `vcellmbsolver_py` extension and the pure-Python wrapper are placed
# in the wheel (the "python" install component); the static C++ library, the
# CLI binary, and the C++ headers are deliberately excluded. Tests and the
# job-status messaging (CURL) are turned off for wheel builds.
# ---------------------------------------------------------------------------
[tool.scikit-build]
cmake.version = ">=3.13"
build.targets = ["_core"]
install.components = ["python"]
wheel.packages = []          # the pyvcell_mbsolver package is installed by CMake, not auto-copied
wheel.license-files = ["LICENSE"]
sdist.include = ["CMakeLists.txt"]

[tool.scikit-build.cmake.define]
BUILD_TESTING = "OFF"
OPTION_TARGET_MESSAGING = "OFF"

# importlib import-mode prevents the source tree from shadowing the built/
# installed pyvcell_mbsolver package when running pytest directly.
[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["python/tests"]

# Keep the wheel version in lock-step with the CMake project() version.
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
regex = '''project\(VCellMovingBoundary VERSION (?P<value>[0-9]+\.[0-9]+\.[0-9]+)'''

# ---------------------------------------------------------------------------
# cibuildwheel: build redistributable, repaired wheels across platforms.
# Native dependencies (HDF5, Boost) are installed per-platform in before-all.
# Wheel repair (auditwheel/delocate/delvewheel) vendors the shared HDF5 libs
# into the wheel so it is self-contained.
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* *_i686 *-win32"
build-frontend = "build"
test-command = "python -c \"import pyvcell_mbsolver; from pyvcell_mbsolver import _core; print('import OK')\""

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = [
    "dnf install -y epel-release",
    "dnf install -y hdf5-devel boost-devel",
]

[tool.cibuildwheel.macos]
before-all = "brew install hdf5 boost"
# Homebrew bottles target the runner's macOS, so the vendored HDF5 libs require
# a recent minimum; matching it here keeps delocate's wheel repair happy. (This
# means the macOS wheels require macOS 15+, as with vcell-fvsolver.)
environment = { MACOSX_DEPLOYMENT_TARGET = "15.0" }

[tool.cibuildwheel.windows]
# On Windows the HDF5/Boost dependencies come from vcpkg, which the wheels
# workflow installs and points to via the CMAKE_ARGS / CMAKE_GENERATOR
# environment variables (see .github/workflows/wheels.yml). delvewheel vendors
# the resulting DLLs into the wheel.
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
